--- a/_data/faq/07_Runtime_Config/faq06_codeset_0.yml
+++ b/_data/faq/07_Runtime_Config/faq06_codeset_0.yml
@@ -1,4 +1,4 @@
-Q: Why do I get this: ACE_DLL::open failed for TAO_Codeset?
+Q: 'Why do I get this: ACE_DLL::open failed for TAO_Codeset?'
 
 A: Codeset negotiation is an optional feature for TAO. It is implemented in a
 separate shared library, libTAO_Codeset.so, or TAO_Codeset.dll on Windows.
