reset and continue poking authentication.

--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,6 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://theaceorb.com" # the base hostname & protocol for your site
 # twitter_username:
 github_username:  pmesnier
-
+github_authtoken:
 # Build settings
 markdown: kramdown
