--- a/_config.yml
+++ b/_config.yml
@@ -6,14 +6,19 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: ACE/TAO clone
+title: phil's ACE/TAO clone
 email: mesnierp@ociweb.com
 description: > # this means to ignore newlines until "baseurl:"
-  This is Phi's working copy of the DOC Group's version of ACE TAO.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://theaceorb.com" # the base hostname & protocol for your site
+  This is Phil's working copy of the DOC Group's version of ACE TAO.
+baseurl: "http://pmesnier.github.io" # the subpath of your site, e.g. /blog
+url: "/ATCD" # the base hostname & protocol for your site
 # twitter_username:
 github_username:  pmesnier
-github_authtoken:
+
 # Build settings
 markdown: kramdown
+
+# github-metadata
+repository: pmesnier/ATCD
+gems: ['jekyll-github-metadata', 'jekyll-redirect-from']
+
