--- a/_data/faq/01_General/faq08_015.yml
+++ b/_data/faq/01_General/faq08_015.yml
@@ -18,9 +18,7 @@ A: >
  your technical strategies in public forums, where your competition may be
  watching.  Contact <a href="mailto:sales@ociweb.com?subject=TAO%20FAQ%20%28maintained%20by%20OCI%20for%20the%20TAO%20Community%29">sales@ociweb.com</a> to discuss your project.
  </p><p> Open source software can add immeasurably to the development of a
- rich infrastructure, and the provision of a high degree of application  
+ rich infrastructure, and the provision of a high degree of application
              interoperability, from which we all may derive benefit.  Read
- more about the benefits of open source at <a href="http://theaceorb.com/product/benefit.html">http://theaceorb.com/product/benefit.html</a>.
+ more about the benefits of open source at <a href="{{site.baseurl}}/product/benefit.html">{{site.baseurl}}/product/benefit.html</a>.
  <br>
- 
- 
