--- a/_data/faq/04_Services/faq04_010.yml
+++ b/_data/faq/04_Services/faq04_010.yml
@@ -14,7 +14,7 @@ A: >
  <pre>  Naming_Service -ORBListenEndpoints iiop://name_server_host:name_server_port<br></pre>
  For more detailed information on using the
  <code>-ORBListenEndpoints</code> option, see the <a
- href="http://www.theaceorb.com/purchase/index.html"><em>TAO Developer's Guide</em></a>
+ href="{{site.baseurl}}/purchase/index.html"><em>TAO Developer's Guide</em></a>
  <p>
  For more information on direct binding of persistent object
  references, see Henning's and Vinoski's <em>Advanced CORBA Programming with C++</em>, 14.3.2.
