--- a/_data/faq/01_General/faq07_Compliance.yml
+++ b/_data/faq/01_General/faq07_Compliance.yml
@@ -6,9 +6,9 @@ A: >
  
  <p>
  Each version of the <a
- href="http://www.theaceorb.com/purchase/index.html"><em>TAO Developer's Guide</em></a>
+ href="{{site.baseurl}}/purchase/index.html"><em>TAO Developer's Guide</em></a>
  includes an appendix that discusses compliance of that version
  of TAO in detail.  These appendices are available via <a
- href="http://www.theaceorb.com/downloads/index.html">http://www.theaceorb.com/downloads/index.html</a>.
+ href="{{site.baseurl}}/downloads/index.html">{{site.baseurl}}/downloads/index.html</a>.
  </p>
  
