--- a/_data/faq/03_OCI_Specific/faq04_050.yml
+++ b/_data/faq/03_OCI_Specific/faq04_050.yml
@@ -4,12 +4,12 @@ A: >
  Yes.
  <p>
  The Table of Contents and Index for OCI's <a
- href="http://www.theaceorb.com/purchase/index.html"><em>TAO Developer's Guide</em></a>
+ href="{{site.baseurl}}/purchase/index.html"><em>TAO Developer's Guide</em></a>
  are available in PDF form via:
  </p>
  
  <p>
- <a href="http://www.theaceorb.com/downloads/index.html">http://www.theaceorb.com/downloads/index.html</a>
+ <a href="{{site.baseurl}}/downloads/index.html">{{site.baseurl}}/downloads/index.html</a>
  </p>
  
  <p>
