--- a/_data/faq/03_OCI_Specific/faq07_139.yml
+++ b/_data/faq/03_OCI_Specific/faq07_139.yml
@@ -22,7 +22,7 @@ A: >
  If you would like to open a technical support contract with
  OCI, please contact our sales staff at <a href="mailto:sales@ociweb.com?subject=technical%20support%20contract%20info">sales@ociweb.com</a>
  or call +1.314.579.0066 extension 206. Please consult
- <a href="http://www.theaceorb.com/support">http://www.theaceorb.com/support</a> for a description
+ <a href="{{site.baseurl}}/support">{{site.baseurl}}/support</a> for a description
  of the TAO support model.
  
  
