--- a/_data/faq/03_OCI_Specific/faq08_OCI_Support_Platforms.yml
+++ b/_data/faq/03_OCI_Specific/faq08_OCI_Support_Platforms.yml
@@ -1,5 +1,5 @@
 Q: Which platforms (hardware/OS combinations) are supported by OCI's Distribution of TAO?
 
 A: >
- A full list of platforms (and other support details) is available at <a href="http://www.theaceorb.com/support/index.html">http://www.theaceorb.com/support/index.html</a>.
+ A full list of platforms (and other support details) is available at <a href="{{site.baseurl}}/support/index.html">{{site.baseurl}}/support/index.html</a>.
  
