--- a/_data/faq/05_Security/faq03_106.yml
+++ b/_data/faq/05_Security/faq03_106.yml
@@ -6,7 +6,7 @@ A: >
  
  <p>
  See also the "TAO Security" chapter of the <a
- href="http://www.theaceorb.com/purchase/index.html"><em>TAO Developer's Guide</em></a>
+ href="{{site.baseurl}}/purchase/index.html"><em>TAO Developer's Guide</em></a>
  </p>
  
  
