--- a/_data/faq/08_Misc/faq04_109.yml
+++ b/_data/faq/08_Misc/faq04_109.yml
@@ -29,7 +29,7 @@ A: >
  
  <p>
  For more information about Exceptions and TAO, see the Error
- Handling chapter of the <a href="http://www.theaceorb.com/purchase/index.html"><em>TAO Developer's Guide</em></a>.
+ Handling chapter of the <a href="{{site.baseurl}}/purchase/index.html"><em>TAO Developer's Guide</em></a>.
  <br>
  
  
