--- a/_data/faq/13_Windows/faq03_098.yml
+++ b/_data/faq/13_Windows/faq03_098.yml
@@ -3,7 +3,7 @@ Q: How do I export generated classes from DLLs?
 A: >
  According
  to the <a
- href="http://www.theaceorb.com/purchase/index.html"><em>TAO
+ href="{{site.baseurl}}/purchase/index.html"><em>TAO
  Developer's Guide</em></a>, TAO IDL Compiler chapter, section on "Back End Options",
  the way to export generated classes is as follows:<br>
  <ol>
@@ -24,7 +24,7 @@ A: >
  step is done for you automatically.)
  </ol>
  <p>
- See the <a href="http://www.theaceorb.com/purchase/index.html"><em>TAO
+ See the <a href="{{site.baseurl}}/purchase/index.html"><em>TAO
  Developer's Guide</em></a> for more information and examples.
  
  
